tests/fixtures/negative/001_unterminated_string.js
// Expected error: unterminated string literal
const x = "hello world;
